# ECA

./: .gitignore  AGENTS.md  ANALYSIS.md  BACKEND_IMPLEMENTATION_PLAN.md  BACKEND_TEST_REPORT.md  COMPLETE_IMPLEMENTATION_ROADMAP.md  COMPLETE_KPI_EXTRACTION_GUIDE.md  COMPLETE_RESOURCE_INSPECTION.md  CROSS_CHECK_COMPLETE.md  DEEP_RESOURCE_INSPECTION.md  FEATURES.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_STATUS_FINAL.md  LICENSE  MVP requirement document.md  PRODUCT_REQUIREMENTS.md  README.md  RESOURCE_EXTRACTION_SUMMARY.md  RESOURCE_INSPECTION_COMPLETE.md  banana  pom.xml  start-and-test.sh  start-eca.bat  start-eca.sh  test-backend.sh  test-integration.sh
.amazonq/prompts/: speckit.checklist.md  speckit.constitution.md  speckit.implement.md  speckit.plan.md  speckit.specify.md  speckit.tasks.md
data/: eca.mv.db  eca.trace.db
frontend/: README.md  next.config.js  package-lock.json  package.json  start-eca-windows.bat  tailwind.config.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: main.rs
frontend/src-tauri/wix/: license.rtf  main.wxs
old-scat-codebase/: Procfile.proxy
old-scat-codebase/scripts/: batch_process.sh  (+4 more)
scat/: capture.py  check_diagnostic_mode.py  comprehensive_telecom_parser.py  file_converter.py  map_generator.py  realtime_adb_metrics.py  realtime_kpi_extractor.py  realtime_kpi_monitor.py  requirements.txt
test/: .gitignore  KPI_Stats_3G MTN log_20251209_114242.json  KPI_Stats_mtn_to_mtn_sms_length_536_originated_success_test.json  PRODUCT_REQUIREMENTS.md
tools/: README.md
(+285 files in other folders)
