[package]
name = "extended-cellular-analyzer"
version = "0.1.0"
description = "Extended Cellular Analyzer - Professional UE baseband log analyzer"
authors = ["Nathan Boutchouang"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-execute", "shell-sidecar", "shell-open", "fs-all", "path-all", "http-request", "dialog-all", "notification-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
